; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/util/extr_var.c_locate_var_of_level.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/util/extr_var.c_locate_var_of_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@locate_var_of_level_walker = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @locate_var_of_level(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i32 -1, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  store i32 %7, i32* %8, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @locate_var_of_level_walker, align 4
  %11 = bitcast %struct.TYPE_2__* %5 to i8*
  %12 = call i32 @query_or_expression_tree_walker(i32* %9, i32 %10, i8* %11, i32 0)
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  ret i32 %14
}

declare dso_local i32 @query_or_expression_tree_walker(i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
